close #2 from @kathsherratt

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -118,3 +118,9 @@
   keywords = {Communicable Diseases,COVID-19,Forecasting,Humans,Pandemics,Probability,SARS-CoV-2},
   file = {/mnt/data/github-synced/zotero-nikos/storage/EX37R6J8/Bracher et al. - 2021 - Evaluating epidemic forecasts in an interval forma.pdf}
 }
+
+@MISC{europeanforecasthub,
+  title        = "Community",
+  howpublished = "\url{https://covid19forecasthub.eu/community.html}",
+  note         = "Accessed: 2022-9-21"
+}
