Close #4 and add detail on GitHub actions compute

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -124,3 +124,28 @@
   howpublished = "\url{https://covid19forecasthub.eu/community.html}",
   note         = "Accessed: 2022-9-21"
 }
+
+@MISC{GitHubActionsAbout,
+  title        = "About {GitHub-hosted} runners",
+  howpublished = "\url{https://ghdocs-prod.azurewebsites.net/en/actions/using-github-hosted-runners/about-github-hosted-runners}",
+  note         = "Accessed: 2022-9-21",
+  language     = "en"
+}
+
+@MISC{GitHubActionsLargeRunners,
+  title        = "{GitHub} Actions Larger runners - Are now in public beta",
+  booktitle    = "The {GitHub} Blog",
+  publisher    = "GitHub",
+  month        =  sep,
+  year         =  2022,
+  howpublished = "\url{https://github.blog/changelog/2022-09-01-github-actions-larger-runners-are-now-in-public-beta/}",
+  note         = "Accessed: 2022-9-21",
+  language     = "en"
+}
+
+@MISC{AzurePricing,
+  title        = "Pricing - Linux Virtual Machines",
+  howpublished = "\url{https://azure.microsoft.com/en-gb/pricing/details/virtual-machines/linux/}",
+  note         = "Accessed: 2022-9-21",
+  language     = "en"
+}
