--- a/paper/library.bib
+++ b/paper/library.bib
@@ -149,3 +149,41 @@
   note         = "Accessed: 2022-9-21",
   language     = "en"
 }
+
+@ARTICLE{Bosse2022-hm,
+  title    = "Comparing human and model-based forecasts of {COVID-19} in
+              Germany and Poland",
+  author   = "Bosse, Nikos I and Abbott, Sam and Bracher, Johannes and Hain,
+              Habakuk and Quilty, Billy J and Jit, Mark and {Centre for the
+              Mathematical Modelling of Infectious Diseases COVID-19 Working
+              Group} and van Leeuwen, Edwin and Cori, Anne and Funk, Sebastian",
+  journal  = "PLoS Comput. Biol.",
+  volume   =  18,
+  number   =  9,
+  pages    = "e1010405",
+  month    =  sep,
+  year     =  2022,
+  language = "en",
+  issn     = "1553-734X, 1553-7358",
+  pmid     = "36121848",
+  doi      = "10.1371/journal.pcbi.1010405"
+}
+
+@ARTICLE{Sherratt2022-ue,
+  title     = "Predictive performance of multi-model ensemble forecasts of
+               {COVID-19} across European nations",
+  author    = "Sherratt, Katharine and Gruson, Hugo and Johnson, Helen and
+               Niehus, Rene and Prasse, Bastian and Sandman, Frank and
+               Deuschel, Jannik and Wolffram, Daniel and Abbott, Sam and
+               Ullrich, Alexander and {Others}",
+  journal   = "medRxiv",
+  publisher = "Cold Spring Harbor Laboratory Press",
+  year      =  2022,
+  doi       = "10.1101/2022.06.16.22276024"
+}
+
+@MISC{EuroHubGitHub,
+  title       = "covid19-forecast-hub-europe: European Covid-19 Forecast Hub",
+  institution = "Github",
+  language    = "en"
+}
