flesh out references

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -119,7 +119,7 @@
   file = {/mnt/data/github-synced/zotero-nikos/storage/EX37R6J8/Bracher et al. - 2021 - Evaluating epidemic forecasts in an interval forma.pdf}
 }
 
-@MISC{europeanforecasthub,
+@MISC{europeanforecasthubcommunity,
   title        = "Community",
   howpublished = "\url{https://covid19forecasthub.eu/community.html}",
   note         = "Accessed: 2022-9-21"
@@ -186,4 +186,81 @@
   title       = "covid19-forecast-hub-europe: European Covid-19 Forecast Hub",
   institution = "Github",
   language    = "en"
+}
+
+@ARTICLE{Abbott2020-iy,
+  title     = "Estimating the time-varying reproduction number of {SARS-CoV-2}
+               using national and subnational case counts",
+  author    = "Abbott, Sam and Hellewell, Joel and Thompson, Robin N and
+               Sherratt, Katharine and Gibbs, Hamish P and Bosse, Nikos I and
+               Munday, James D and Meakin, Sophie and Doughty, Emma L and Chun,
+               June Young and Chan, Yung-Wai Desmond and Finger, Flavio and
+               Campbell, Paul and Endo, Akira and Pearson, Carl A B and Gimma,
+               Amy and Russell, Tim and Flasche, Stefan and Kucharski, Adam J
+               and Eggo, Rosalind M and Funk, Sebastian and {CMMID COVID
+               modelling group}",
+  journal   = "Wellcome Open Res.",
+  publisher = "F1000 Research Ltd",
+  volume    =  5,
+  pages     = "112",
+  month     =  dec,
+  year      =  2020,
+  language  = "en",
+  issn      = "2398-502X",
+  doi       = "10.12688/wellcomeopenres.16006.2"
+}
+
+@Manual{EpiNow2,
+  title = {EpiNow2: Estimate Real-Time Case Counts and Time-Varying Epidemiological Parameters},
+  author = {Sam Abbott and Joel Hellewell and Katharine Sherratt and Katelyn Gostic and Joe Hickson and Hamada S. Badr and Michael DeWitt and Robin Thompson and {EpiForecasts} and Sebastian Funk},
+  year = {2020},
+  doi = {10.5281/zenodo.3957489},
+}
+
+@ARTICLE{Gostic2020-vw,
+  title    = "Practical considerations for measuring the effective reproductive
+              number, Rt",
+  author   = "Gostic, Katelyn M and McGough, Lauren and Baskerville, Edward B
+              and Abbott, Sam and Joshi, Keya and Tedijanto, Christine and
+              Kahn, Rebecca and Niehus, Rene and Hay, James A and Salazar,
+              Pablo M De and Hellewell, Joel and Meakin, Sophie and Munday,
+              James D and Bosse, Nikos I and Sherrat, Katharine and Thompson,
+              Robin N and White, Laura F and Huisman, Jana S and Scire,
+              J{\'e}r{\'e}mie and Bonhoeffer, Sebastian and Stadler, Tanja and
+              Wallinga, Jacco and Funk, Sebastian and Lipsitch, Marc and Cobey,
+              Sarah",
+  journal  = "PLoS Comput. Biol.",
+  volume   =  16,
+  number   =  12,
+  pages    = "e1008409",
+  year     =  2020,
+  language = "en",
+  issn     = "1553-734X, 1553-7358",
+  doi      = "10.1371/journal.pcbi.1008409"
+}
+
+@ARTICLE{Bracher2021-wk,
+  title    = "A pre-registered short-term forecasting study of {COVID-19} in
+              Germany and Poland during the second wave",
+  author   = "Bracher, J and Wolffram, D and Deuschel, J and G{\"o}rgen, K and
+              Ketterer, J L and Ullrich, A and Abbott, S and Barbarossa, M V
+              and Bertsimas, D and Bhatia, S and Bodych, M and Bosse, N I and
+              Burgard, J P and Castro, L and Fairchild, G and Fuhrmann, J and
+              Funk, S and Gogolewski, K and Gu, Q and Heyder, S and Hotz, T and
+              Kheifetz, Y and Kirsten, H and Krueger, T and Krymova, E and Li,
+              M L and Meinke, J H and Michaud, I J and Niedzielewski, K and
+              O{\.z}a{\'n}ski, T and Rakowski, F and Scholz, M and Soni, S and
+              Srivastava, A and Zieli{\'n}ski, J and Zou, D and Gneiting, T and
+              Schienle, M and {List of Contributors by Team}",
+  journal  = "Nat. Commun.",
+  volume   =  12,
+  number   =  1,
+  pages    = "5173",
+  month    =  aug,
+  year     =  2021,
+  language = "en",
+  issn     = "2041-1723",
+  pmid     = "34453047",
+  doi      = "10.1038/s41467-021-25207-0",
+  pmc      = "PMC8397791"
 }
